fixed touch bugs on mobile devices

--- a/client/src/common/FileUploadForm/FileUploadForm.sass
+++ b/client/src/common/FileUploadForm/FileUploadForm.sass
@@ -91,13 +91,14 @@
   .file-upload
     width: 100%
     max-width: 100%
-    height: 60vh
-    min-height: 60vh
+    height: 80vh
+    min-height: 80vh
     padding: 10px
     margin: 5px 0
 
   .file-upload__background-decorator
     font-size: 80px
+    opacity: 1
 
     &:after
       font-size: 12px
