--- a/client/src/containers/Gallery/GalleryForm/GalleryForm.sass
+++ b/client/src/containers/Gallery/GalleryForm/GalleryForm.sass
@@ -86,7 +86,7 @@
     padding: 0
     flex-direction: column
     min-height: 100vh
-    height: 100vh
+    height: auto
     max-height: none
 
   .new-photo__form
@@ -94,5 +94,5 @@
     max-width: 100%
     padding: 10px
     margin: 2px 0
-    min-height: 50%
-    height: 50%
+    min-height: 50vh
+    height: auto
